--- a/landingPage.html
+++ b/landingPage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Login Page</title>
+  <title>DLSU-D Portal</title>
   <style>
     body {
       margin: 0;
@@ -17,16 +17,18 @@
       left: 50%;
       transform: translate(-50%, -50%);
       background-color: rgba(0, 0, 0, 0.5);
-      padding: 30px;
+      padding: 50px;
       border-radius: 10px;
       color: white;
-      text-align: center;
+      text-align: left;
+      width: 400px; /* Adjust the width as desired */
     }
 
     .logo {
       float: right;
       margin-top: -15px;
       margin-right: -15px;
+      max-width: 80px; /* Adjust the logo size as desired */
     }
 
     .textbox {
@@ -38,43 +40,80 @@
       border: none;
     }
 
+    .button-container {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 20px;
+    }
+
     .button {
-      width: 100%;
+      width: 48%;
       padding: 10px;
       box-sizing: border-box;
       border-radius: 5px;
       border: none;
-      background-color: green;
+      background-color: #1fff79;
       color: white;
       font-weight: bold;
       cursor: pointer;
+      transition: transform 0.2s, box-shadow 0.2s;
     }
 
-    .forgot-password {
-      float: left;
-      color: green;
-      margin-top: 10px;
+    .button:hover {
+      transform: scale(1.05);
+      box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
     }
 
-    .footer-links {
-      float: right;
-      color: green;
-      margin-top: 10px;
+    .register-button {
+      background-color: white;
+      color: black;
+    }
+
+    .forgot-password,
+    .footer-links span {
+      color: #1fff79;
+      transition: color 0.2s;
+    }
+
+    .forgot-password:hover,
+    .footer-links span:hover {
+      color: white;
+    }
+
+    .footer-links p {
+      margin: 0;
+      display: flex;
+      align-items: center;
+    }
+
+    .footer-links p span {
+      margin-right: 4px;
+    }
+
+    .green-dot {
+      width: 4px;
+      height: 4px;
+      background-color: #1fff79;
+      border-radius: 50%;
+      margin: 0 4px;
     }
   </style>
 </head>
 <body>
   <div class="container">
     <img src="res/logo.png" alt="Logo" class="logo">
-    <h2>Login to my.DLSU-D</h2>
-    <p>Enter your username and password to log in:</p>
+    <h2 style="text-align: left;">Login to my.DLSU-D</h2>
+    <p style="text-align: left;">Enter your username and password to log in:</p>
     <input type="text" placeholder="Username" class="textbox">
     <input type="password" placeholder="Password" class="textbox">
-    <button class="button" onclick="location.href='login.html'">Log In</button>
-    <button class="button" onclick="location.href='register.html'">Register</button>
+    <div class="button-container">
+      <button class="button" onclick="location.href='login.html'">Log In</button>
+      <button class="button register-button" onclick="location.href='register.html'">Register</button>
+    </div>
     <p class="forgot-password">Forgot password?</p>
     <div class="footer-links">
-      <p>FAQ | Help | Contact Us</p>
+      <p><span>FAQ</span><span class="green-dot"></span><span>Help</span><span class="green-dot"></span><span>Contact Us</span></p>
     </div>
   </div>
 </body>
