--- a/landingPage.html
+++ b/landingPage.html
@@ -21,7 +21,7 @@
       border-radius: 10px;
       color: white;
       text-align: left;
-      width: 400px; /* Adjust the width as desired */
+      width: 480px; /* Adjust the width as desired */
     }
 
     .logo {
@@ -81,6 +81,10 @@
       color: white;
     }
 
+    .footer-links {
+      margin-top: 20px;
+    }
+
     .footer-links p {
       margin: 0;
       display: flex;
@@ -113,7 +117,13 @@
     </div>
     <p class="forgot-password">Forgot password?</p>
     <div class="footer-links">
-      <p><span>FAQ</span><span class="green-dot"></span><span>Help</span><span class="green-dot"></span><span>Contact Us</span></p>
+      <p>
+        <span>FAQ</span>
+        <span class="green-dot"></span>
+        <span>Help</span>
+        <span class="green-dot"></span>
+        <span>Contact Us</span>
+      </p>
     </div>
   </div>
 </body>
