change font color

--- a/landingPage.html
+++ b/landingPage.html
@@ -107,8 +107,13 @@
 <body>
   <div class="container">
     <img src="res/logo.png" alt="Logo" class="logo">
-    <h2 style="text-align: left;">Login to my.DLSU-D</h2>
-    <p style="text-align: left;">Enter your username and password to log in:</p>
+    <h2 style="text-align: left;">
+      Login to my.DLSU-D
+      <span style="font-size: 16px; color: lightgrey;">Ver 6.0</span>
+    </h2>
+    <p style="text-align: left; color: lightgrey;">
+      Enter your username and password to log in:
+    </p>
     <input type="text" placeholder="Username" class="textbox">
     <input type="password" placeholder="Password" class="textbox">
     <div class="button-container">
