--- a/landingPage.html
+++ b/landingPage.html
@@ -107,6 +107,14 @@
       border-radius: 50%;
       margin: 0 4px;
     }
+
+    .footer {
+      background-color: white;
+      padding: 20px;
+      text-align: center;
+      color: black;
+      font-size: 14px;
+    }
   </style>
 </head>
 <body>
@@ -141,5 +149,9 @@
 
   <img src="res/baptist.png" alt="Logo" style="width: 100%; height: auto;">
 
+  <div class="footer">
+    <span style="float: left; margin-right: 20px; color: black;">Albios, Shahid | Carillo, Renz</span>
+    <span style="float: right; color: black;">&copy; 2023 Website, All rights reserved</span>
+  </div>
 </body>
 </html>
