--- a/landingPage.html
+++ b/landingPage.html
@@ -115,6 +115,25 @@
       color: black;
       font-size: 14px;
     }
+
+    /* Scroll Styling */
+    ::-webkit-scrollbar {
+      width: 10px;
+      background-color: #b3ffb9;
+    }
+
+    ::-webkit-scrollbar-track {
+      background-color: transparent;
+    }
+
+    ::-webkit-scrollbar-thumb {
+      background-color: #00913a;
+      border-radius: 0;
+    }
+
+    ::-webkit-scrollbar-thumb:hover {
+      background-color: #007d31;
+    }
   </style>
 </head>
 <body>
