add sign out functionality

--- a/portal.html
+++ b/portal.html
@@ -93,7 +93,7 @@
       <a href="#">Features</a>
       <a href="#">Application</a>
       <a href="#">Links</a>
-      <a href="#" class="sign-out">Sign Out</a>
+      <a href="landingPage.html" class="sign-out">Sign Out</a>
     </div>
   </div>
 
