change to portal.html

--- a/landingPage.html
+++ b/landingPage.html
@@ -150,7 +150,7 @@
       <input type="text" placeholder="Username" class="textbox">
       <input type="password" placeholder="Password" class="textbox">
       <div class="button-container">
-        <button class="button" onclick="location.href='login.html'">Log In</button>
+        <button class="button" onclick="location.href='portal.html'">Log In</button>
         <button class="button register-button" onclick="location.href='register.html'">Register</button>
       </div>
       <p class="forgot-password">Forgot password?</p>
