resize my.DLSU-D Portal

--- a/portal.html
+++ b/portal.html
@@ -88,7 +88,7 @@
 </head>
 <body>
   <div class="header">
-    <h1>My.DLSU-D Portal</h1>
+    <h1>my.DLSU-D Portal</h1>
     <div class="menu-options">
       <a href="#">Features</a>
       <a href="#">Application</a>
